<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="36dp">

    <include
        android:id="@+id/cardViewAvatar"
        layout="@layout/card_user_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/subtitleLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/feedback_subtitle_like"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAvatar" />

    <EditText
        android:id="@+id/editTextLike"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="top"
        android:hint="@string/feedback_hint"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleLike" />

    <TextView
        android:id="@+id/subtitleUpgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/feedback_subtitle_upgrade"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLike" />

    <EditText
        android:id="@+id/editTextUpgrade"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:fontFamily="sans-serif"
        android:gravity="top"
        android:hint="@string/feedback_hint"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleUpgrade" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#4400FF"
        android:padding="16dp"
        android:text="@string/feedback_button_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpgrade" />

    <TextView
        android:id="@+id/textNotAsked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/feedback_button_not_ask"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNext" />

</androidx.constraintlayout.widget.ConstraintLayout>